Fix CTA spacing

--- a/apps/root/styles/fragments/cta.scss
+++ b/apps/root/styles/fragments/cta.scss
@@ -4,6 +4,7 @@
   justify-content: center;
 
   padding: var(--spacing-sm);
+  margin: var(--spacing-sm) 0;
   border-radius: var(--rounded-sm);
 
   font-weight: bold;
@@ -66,4 +67,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  h2, h3, h4, h5, h6 {
+    margin: var(--spacing-sm) 0;
+  }
 }
